--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css"
+          integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 
     <title>Cv</title>
@@ -40,6 +42,11 @@
 
                 <h2 class="header">Paweł Polit</h2>
 
+                <p>Hi, my name is Paweł. Some time ago i started learning front-end technologies and i discovered that i
+                    really like it.
+                    Since then my days go by on learning to code</p>
+
+
             </div>
 
         </div>
@@ -49,9 +56,6 @@
 
 
 </div>
-
-
-
 
 
 <div class="container container-fluid ">
@@ -66,10 +70,13 @@
 
             <div class="contact">
 
-                <p>Kosciuszki 7/A, Werbkowice,Poland</p>
-            <p> 884 625 739</p>
-            <p> www.paulVer777.nasa</p>
-            <p> pawel,gitara@onet.eu</p>
+                <ul class="fa-ul">
+                    <li><i class="fa-li fas fa-home"></i>Kosciuszki 7/A, Werbkowice,Poland</li>
+                    <li><i class="fa-li fas fa-phone"></i>884 625 739</li>
+                    <li><i class="fa-li fas fa-globe"></i> www.paulVer777.nasa</li>
+                    <li><i class="fa-li fas fa-envelope-square"></i>pawel.gitara@onet.eu</li>
+                </ul>
+
 
             </div>
 
@@ -77,21 +84,28 @@
 
             <div class="contact">
 
-            <p> Html 5,Css 3</p>
-            <p> Javascript</p>
-            <p> Bootstrap</p>
-            <p> React</p>
-            <p> Git</p>
-            <p> RWD</p>
+                <ul class="fa-ul">
+                    <li><i class="fa-li fab fa-html5"></i>HTML 5 - intermediate</li>
+                    <li><i class="fa-li fab fa-css3-alt"></i>CSS 3- intermediate</li>
+                    <li><i class="fa-li fab fa-js-square"></i>Javascript- intermediate</li>
+                    <li><i class="fa-li fas fa-puzzle-piece"></i>Bootstrap - basic</li>
+                    <li><i class="fa-li fab fa-react"></i>React -basic</li>
+                    <li><i class="fa-li fab fa-git"></i>Git - basic</li>
+                    <li><i class="fa-li fas fa-arrows-alt-h"></i>RWD - basic</li>
+                </ul>
 
             </div>
 
-          <h2 class="c">Languages</h2>
+            <h2 class="c">Languages</h2>
 
             <div class="contact">
 
-            <p>Polish-native</p>
-            <p>English-intermediate(TELC B2)</p>
+                <ul class="fa-ul">
+
+                    <li><i class="fa-li fas fa-microphone"></i>Polish-native</li>
+                    <li><i class="fa-li fas fa-microphone"></i>English-intermediate</li>
+
+                </ul>
 
             </div>
 
@@ -99,15 +113,14 @@
 
             <div class="contact">
 
-                <p>Coding</p>
-                <p>Guitar</p>
-                <p>Sport</p>
-                <p>Music</p>
+                <ul class="fa-ul">
+                    <li><i class="fa-li fas fa-music"></i>Guitar</li>
+                    <li><i class="fa-li fas fa-code"></i>Coding</li>
+                    <li><i class="fa-li fas fa-quidditch"></i> Sport</li>
+                    <li><i class="fa-li fas fa-music"></i>Music</li>
+                </ul>
 
             </div>
-
-
-
 
 
         </div>
@@ -117,6 +130,7 @@
 
             <div class="content">
 
+                <h2>About</h2>
 
 
 
