--- a/index.html
+++ b/index.html
@@ -130,13 +130,40 @@
 
             <div class="content">
 
-                <h2>About</h2>
+                <h2 class="about">About</h2>
 
-
-
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae tellus vulputate, vulputate
+                    elit nec, pellentesque odio. Nullam vitae tortor sapien. Sed et justo sit amet erat viverra
+                    facilisis eget ac risus. Fusce urna nisl, mollis ut porttitor sit amet, dignissim eget magna. Proin
+                    cursus tellus vitae nulla placerat, eget aliquet elit dapibus. Fusce consectetur turpis id nulla
+                    vehicula ornare. Nulla auctor eu dolor sit amet mollis. Aenean sit amet dolor rhoncus, ultrices erat
+                    eu, suscipit sem. Donec at mi neque. Aenean at justo at lorem maximus condimentum vestibulum
+                    pharetra libero. Nam finibus velit a urna bibendum efficitur.</p>
 
 
             </div>
+
+            <div class="content1">
+
+          <h2 class="about">Education</h2>
+
+                <p>WSEI-2014-2017 Bezpieczenstwo wewnetrzne</p>
+
+
+            </div>
+
+
+            <div class="content1">
+
+                <h2 class="about">Courses</h2>
+
+                <p>English course B1-B2</p>
+                <p>Front-end course</p>
+
+            </div>
+
+
+
 
         </div>
 
